[WIP] Support error code